crates/compiler/tests/snapshots/tests__parse_errors-5.snap
---
source: crates/compiler/tests/tests.rs
expression: parse_result
---
Ident {
    ann: Annotation {
        start: Position {
            offset: 0,
            row: 1,
            column: 1,
        },
        end: Position {
            offset: 3,
            row: 1,
            column: 4,
        },
    },
    var: "dog",
}
