crates/compiler/tests/snapshots/tests__parse_errors-8.snap
---
source: crates/compiler/tests/tests.rs
expression: parse_errors
---
[
    ParseError {
        ann: Annotation {
            start: Position {
                offset: 7,
                row: 1,
                column: 8,
            },
            end: Position {
                offset: 10,
                row: 1,
                column: 11,
            },
        },
        message: "unexpected ` !!`",
    },
]
