crates/compiler/tests/snapshots/tests__parse_errors.snap
---
source: crates/compiler/tests/tests.rs
expression: parse_result
---
ParseBlock {
    let_bindings: [],
    final_expr: Error,
}
