crates/compiler/tests/snapshots/tests__typecheck_failure-5.snap
---
source: crates/compiler/tests/tests.rs
expression: string
---
[31m[02] Error:[0m Type mismatch
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m<unknown>:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m(1: Int64)[38;5;249m;[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249mf[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249mh[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249mF[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249ms[0m[38;5;249me[0m[38;5;249m [0m[38;5;249me[0m[38;5;249ml[0m[38;5;249ms[0m[38;5;249me[0m[38;5;249m [0m[38;5;249mT[0m[38;5;249mr[0m[38;5;249mu[0m[38;5;249me[0m
 [38;5;240m  │[0m         ─────┬────  
 [38;5;240m  │[0m              ╰────── Expected type Boolean but got type Int64
[38;5;246m───╯[0m
