crates/compiler/tests/snapshots/tests__typecheck_failure-6.snap
---
source: crates/compiler/tests/tests.rs
expression: string
---
[31m[02] Error:[0m Type mismatch
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m<unknown>:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249mT[0m[38;5;249mr[0m[38;5;249mu[0m[38;5;249me[0m[38;5;249m;[0m[38;5;249m [0m[38;5;249m([0ma[38;5;249m:[0m[38;5;249m [0m[38;5;249mI[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m6[0m[38;5;249m4[0m[38;5;249m)[0m
 [38;5;240m  │[0m                ┬  
 [38;5;240m  │[0m                ╰── Expected type Int64 but got type Boolean
[38;5;246m───╯[0m
